@@ -66,7 +66,7 @@ import wxcompat
 # Values set when main loads
 CONFIG = {
           'CONFIG_BASE' : None, # Set if config base is in nonstandard location
-          'CONFIG_DIR'  : "",   # Root configration directory
+          'CONFIG_DIR'  : "",   # Root configration directory (install dir)
           'CACHE_DIR'   : "",   # Holds temp data about documents
           'KEYPROF_DIR' : "",   # System Keybinding
           'PROFILE_DIR' : "",   # User Profile Directory
